tests/expectations/compiler/definition/tuple_def_fail.out
Error [EPAR0370045]: Expected an identifier.
    --> compiler-test:4:14
     |
   4 |         let (1u8+1u8,1u8+1u8): (u8,u8) = (1u8,2u8);
     |              ^
